package ua.kpi.webcrawler.http;

public interface HttpClient {
    String get(String url) throws Exception;
}
